--- a/src/App.scss
+++ b/src/App.scss
@@ -1,14 +1,171 @@
-.App {
-  text-align: center;
+:root{
+  --colorBlack: #222222;
+  --colorBlackLight: #747474;
+  --colorLight: #f8fbff;
+  --colorNavy: #353577;
+  --colorLavanda: #6866ff;
+  --colorGreen: #74EBD5;
+
+  background-color: var(--colorLight);
+}
+  
+body {
+  margin: 0;
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
+    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+    sans-serif;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
 }
 
 .page{
-  height: 50vh;
+  width: 95%;
+  max-width: 1450px;
+  margin: auto;
+}
 
-  &.--center{
-    display: flex;
-    justify-content: center;
+.logo{
+  font-size: 30px;
+  font-weight: 600;
+  display: inline-flex;
+  align-items: center;
+  justify-content: center;
+  font-family: sans-serif;
+  border: 1px solid rgba(0,0,0,0.1);
+  border-radius: 50%;
+  height: 47px;
+  width: 47px;
+  text-decoration: none;
+  background-color: var(--colorLight);
+  color: var(--colorBlack);
+
+  &:before{
+    content: 'f';
+  }
+
+  &:after{
+    content: 'h';
+  }
+}
+
+.icon{
+  width: 34px;
+  height: 34px;
+  display: inline-block;
+  background-repeat: no-repeat;
+  background-size: contain;
+  background-repeat: no-repeat;
+  background-position: center;
+
+  &.camera{
+    background-image: url('./assets/camera.png');
+  }
+  &.user{
+    background-image: url('./assets/user.png');
+  }
+  &.home{
+    background-image: url('./assets/home.png');
+  }
+  &.search{
+    background-image: url('./assets/search.png');
+  }
+}
+
+.control{
+  appearance: none;
+  -webkit-appearance: none;
+  box-sizing: border-box;
+  padding: 12px;
+
+  &.-text{
+    height: 40px;
+    font-size: 16px;
+    color: var(--colorBlack);
+    border: 1px solid rgba(0,0,0,0.1);
+    background: var(--colorLight);
+    border-radius: 25px;
+    outline: none;
+  }
+}
+
+.col-wrap{
+  display: flex;
+  justify-content: space-between;
+  width: 100%;
+
+  &.--vh{
+    height: calc(100vh - 90px);
+    padding-top: 15px;
+  }
+
+  .col{
+    margin: 0 1%;
+    &:first-child{
+      margin-left: 0;
+    }
+    &:last-child{
+      margin-right: 0;
+    }
+    &.--10{
+      width: 10%;
+    }
+    &.--20{
+      width: 20%;
+    }
+    &.--30{
+      width: 30%;
+    }
+    &.--40{
+      width: 40%;
+    }
+    &.--50{
+      width: 50%;
+    }
+    &.--60{
+      width: 60%;
+    }
+    &.--70{
+      width: 70%;
+    }
+    &.--80{
+      width: 80%;
+    }
+    &.--90{
+      width: 90%;
+    }
+    &.--100{
+      width: 100%;
+    }
+  }
+}
+
+.d-flex{
+  display: flex;
+
+  &.--flx-center-center{
     align-items: center;
-    flex-direction: column;
+    justify-content: center;
+  }
+
+  &.--flx-center-between{
+    align-items: center;
+    justify-content: space-between;
+  }
+}
+
+.--scrollable{
+  &::-webkit-scrollbar {
+    width: 12px;
+  }
+
+  &::-webkit-scrollbar-track {
+    background-color: rgb(230, 230, 230);
+    border-radius: 12px;
+    margin: 10px;
+  }
+
+  &::-webkit-scrollbar-thumb {
+    background-color: rgb(177, 177, 177);
+    border-radius: 12px;
   }
 }
