--- a/src/common/components/header/index.scss
+++ b/src/common/components/header/index.scss
@@ -1,4 +1,7 @@
 header{
-    border-bottom: 1px solid rgba(0,0,0,0.1);
-    padding: 20px;
+    padding: 12px;
+    position: fixed;
+    width: 100%;
+    left: 0;
+    top: 0;
 }
