--- a/src/pages/home/index.scss
+++ b/src/pages/home/index.scss
@@ -1,3 +1,71 @@
-.page-home{
+@mixin wrapStyle {
+    background: #ffffff;
+    box-shadow: 0 0 15px rgba(0,0,0,0.1);
+    border-radius: 15px;
+}
+
+.page.-home{
+    display: flex;
+    justify-content: space-between;
+
+    .col-wrap{
+
+        .col{
+            height: 100%;
+
+            .inner-col{
+                display: flex;
+                flex-direction: column;
+                height: 100%;
+            }
+
+            &.--40{
+
+                .inner-col{
+                    @include wrapStyle;
+                    overflow: hidden;
+                    background-color: #ffffff;
     
+                    .controllers{
+                        min-height: 80px;
+                        display: flex;
+                        justify-content: space-between;
+                        align-items: center;
+                        padding: 0 20px;
+                    }
+    
+                    .list{
+                        flex-grow: flex;
+                        background: var(--colorLight);
+                        padding: 10px;
+                        overflow: auto;
+                        margin: 0 15px 15px 15px;
+                        border-radius: 15px;
+                        box-shadow: inset 0 0 5px rgba(0,0,0,0.1);
+                    }
+                }
+            }
+
+            &.--60{
+                
+                .inner-col{
+                    @include wrapStyle;
+                    background-color: #ffffff;
+                    
+                    // .ranked-col{
+                    //     @include wrapStyle;
+                    //     background-color: #ffffff;
+                    //     min-height: 120px;
+                    //     margin-bottom: 15px;
+                    // }
+
+                    // .photo-col{
+                    //     @include wrapStyle;
+                    //     flex-grow: 1;
+                    //     background-color: #ffffff;
+                    // }
+                }
+            }
+        }
+    }
 }
