--- a/src/common/components/controls/location/index.scss
+++ b/src/common/components/controls/location/index.scss
@@ -18,9 +18,9 @@
         }
 
         .loc{
-            font-size: 13px;
-            font-weight: 600;
-            color: var(--colorLavanda);
+            font-size: 12px;
+            font-weight: 500;
+            color: var(--colorBlackLight);
         }
     }
 }
