--- a/src/common/components/card/index.scss
+++ b/src/common/components/card/index.scss
@@ -1,6 +1,9 @@
 @mixin cardBg {
-    background-color: #74EBD5;
-    background-image: linear-gradient(90deg, #74EBD5 0%, #9FACE6 100%);
+    // background-color: #74EBD5;
+    // background-image: linear-gradient(90deg, #74EBD5 0%, #9FACE6 100%);
+
+    background-color: #FF9A8B;
+    background-image: linear-gradient(90deg, #FF9A8B 0%, #FF6A88 55%, #FF99AC 100%);
 }
 
 .card{
@@ -9,22 +12,26 @@
     box-sizing: border-box;
     padding: 12px;
     border-radius: 12px;
-    box-shadow: 0 0 5px rgba(0,0,0,0.15);
-    background-color: #ffffff;
-    margin: 14px 10px;
+    transition: all 0.3s;
+    margin: 8px 10px;
 
     &.--active{
-        @include cardBg();
+        // @include cardBg();
+        box-shadow: 0 2px 10px rgba(0,0,0,0.15);
+        background-color: #ffffff;
 
         .block{
-            &.-rigth{
-               
-                    .category.category{
-                        background-color: #ffffff;
-                        color: var(--colorNavy);
-                    }
-            
+            &.-right{
+                .link{
+                }
             }
+        }
+    }
+
+    &:hover{
+        background-color: rgba(0,0,0,0.05);
+        &.--active{
+            background-color: #ffffff;
         }
     }
 
@@ -37,7 +44,7 @@
 
         &.-right{
             flex-grow: 1;
-            
+
             .link{
                 text-decoration: none;
                 color: var(--colorNavy);
@@ -47,11 +54,11 @@
                 display: flex;
                 justify-content: space-between;
                 align-items: flex-start;
-                margin-top: 5px;
 
                 .location{
                     color: var(--colorBlackLight);
                     font-size: 12px;
+                    margin-bottom: 5px;
                 }
 
                 .rating{
@@ -62,11 +69,7 @@
                 .category{
                     font-size: 12px;
                     font-weight: 600;
-                    padding: 2px 8px;
                     border-radius: 25px;
-                    color: #ffffff;
-
-                    @include cardBg();
                 }
             }
         }
