--- a/src/common/components/chat/index.scss
+++ b/src/common/components/chat/index.scss
@@ -4,10 +4,6 @@
     flex-direction: column;
     box-sizing: border-box;
     position: relative;
-    border-radius: 12px;
-    box-shadow: 0 0 5px rgba(0,0,0,0.15);
-    background-color: #ffffff;
-    overflow: hidden;
     height: 100%;
 
     .block{
@@ -15,10 +11,34 @@
         box-sizing: border-box;
 
         &.-top{
-            border-bottom: 1px solid rgba(0,0,0,0.05);
+            background-color: #ffffff;
+            box-shadow: 0 0 5px rgba(0,0,0,0.1);
+            border-radius: 12px;
+            margin-bottom: 10px;
 
             .d-flex{
                 padding: 8px;
+
+                a{
+                    text-decoration: none;
+                    color: var(--colorNavy);
+                    font-size: 14px;
+
+                    .avatar{
+                        vertical-align: middle;
+                    }
+                }
+
+                .photo-overview{
+                    p{
+                        padding: 0;
+                        margin: 0;
+                    }
+                    b{
+                        font-size: 10px;
+                        color: var(--colorBlackLight);
+                    }
+                }
             }
         }
 
@@ -32,10 +52,8 @@
         &.-bottom{
             padding: 8px;
             padding-right: 0;
-            border-top: 1px solid rgba(0,0,0,0.05);
             
             .react-chosen{
-                background: var(--colorLight);
                 padding: 10px;
                 border-radius: 12px;
                 box-shadow: inset 0 0 5px rgba(0,0,0,0.1);
