--- a/src/common/components/message/index.scss
+++ b/src/common/components/message/index.scss
@@ -1,11 +1,7 @@
 .message{
     box-sizing: border-box;
     margin: 10px;
-    background-color: #ffffff;
-    padding: 10px;
-    border-radius: 12px;
-    box-shadow: 0 0 6px rgba(0,0,0,0.1);
-
+    
     .message-header{
 
         a{
@@ -13,14 +9,27 @@
             align-items: center;
             text-decoration: none;
             
-            i{
+            b{
                 font-style: normal;
                 color: var(--colorNavy);
+                margin-right: 5px;
+                display: inline-block;
             }
         }
     }
 
     .message-body{
         margin-top: 10px;
+        background-color: #ffffff;
+        padding: 10px;
+        border-radius: 12px;
+        box-shadow: 0 0 6px rgba(0,0,0,0.1);
+        display: inline-block;
+
+        p{
+            font-size: 24px;
+            padding: 0;
+            margin: 0;
+        }
     }
 }
