--- a/src/common/components/photo/index.scss
+++ b/src/common/components/photo/index.scss
@@ -1,25 +1,40 @@
 .photo{
     height: 100%;
     width: 100%;
+    max-width: 420px;
     position: relative;
     box-sizing: border-box;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    margin: auto;
 
     .photo-image{
-        height: 100%;
         width: 100%;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        background-color: #ffffff;
         border-radius: 12px;
         position: relative;
+        flex-grow: 1;
 
-        img{
-            max-width: 100%;
-            max-height: 100%;
+        .photo-display{
+            width: 100%;
+            padding-bottom: 100%;
+            background-size: cover;
+            background-position: center;
+            background-repeat: no-repeat;
+            background-color: #e0e0e0;
+            position: relative;
+            border-radius: 15px;
+
+            .photo-tags{
+                position: absolute;
+                bottom: 10px;
+                left: 0;
+                width: 100%;
+                text-align: right;
+            }
         }
 
-        .photo-control{
+        .photo-navigation{
             position: absolute;
             width: 50%;
             height: 100%;
@@ -32,20 +47,85 @@
         }
     }
 
-    .photo-info{
-        position: absolute;
-        bottom: 0;
-        left: 0;
-        text-align: center;
+    .photo-control{
         width: 100%;
-        padding: 20px 20px 10px 20px;
         box-sizing: border-box;
+        display: flex;
+        align-items: center;
+        margin: auto;
 
-        .btn{
-            margin: 0 15px;
+        .rating-bar{  
+            width: 100%;
+            display: flex;
+            position: relative;
+            background-color: #eeeeee;
+            box-shadow: inset 0 0 5px rgba(0,0,0,0.2);
+            box-sizing: border-box;
+            overflow: hidden;
 
-            &.chosen{
-                background-color: var(--colorGreen);
+            .rating{
+                width: 100%;
+                z-index: 9;
+                height: 35px;
+                border: none;
+                padding: 0;
+                margin: 0;
+                -webkit-appearance: none;
+                appearance: none;
+                background: transparent;
+                position: relative;
+                cursor: pointer;
+                border-radius: 50%;
+                
+                display: flex;
+                align-items: center;
+                justify-content: flex-end;
+                transition: all 0.3s;
+
+                &:hover{
+                    background: rgba(0,0,0,0.08);
+                }
+            }
+
+            .bar{    
+                height: 100%;
+                position: absolute;
+                left: 0;
+                top: 0;
+                transition: all 0.25s;
+                border-radius: 0 25px 25px 0;
+                
+                background-color: #FF9A8B;
+                background-image: linear-gradient(90deg, #FF9A8B 0%, #FF6A88 55%, #FF99AC 100%);
+            }
+        }
+
+        .sider{
+            min-height: 45px;
+            min-width: 45px;
+            z-index: 10;
+            border-radius: 50%;
+            background-color: #ffffff;
+            background-repeat: no-repeat;
+            background-size: 50%;
+            background-position: center;
+            box-shadow: 0 0 4px rgba(0,0,0,0.2);
+            transition: all 0.3s;
+            cursor: pointer;
+
+
+            &.-disagree{
+                margin-right: -18px;
+                background-image: url("../../../assets/thumbs_down2.png");
+            }
+
+            &.-agree{
+                background-image: url("../../../assets/thumbs_up2.png"); 
+                margin-left: -18px;
+            }
+           
+            &:hover{
+                transform: scale(0.9);
             }
         }
     }
