--- a/src/App.scss
+++ b/src/App.scss
@@ -9,6 +9,7 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background-color: #f2f2f2;
 }
 
 .container{
@@ -20,5 +21,23 @@ body {
   &-fluid{
     @extend .container;
     max-width: 1240px;
+  }
+}
+
+.scrolled-area{
+  &::-webkit-scrollbar {
+    width: 10px; /* width of the entire scrollbar */
+  }
+  
+  &::-webkit-scrollbar-track {
+    background: #dadada; /* color of the tracking area */
+    margin: 12px 0;
+    border-radius: 20px;
+  }
+  
+  &::-webkit-scrollbar-thumb {
+    background-color: rgba(0,0,0,0.25); /* color of the scroll thumb */
+    border-radius: 20px; /* roundness of the scroll thumb */
+    border: none ; /* creates padding around scroll thumb */
   }
 }
